[project]
name = "locness-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "streamlit>=1.46.1",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
